# ai-book

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  run_backend.bat  start.bat  vercel.json
.specify/memory/: constitution.md
Web-Book/: README.md  docusaurus.config.ts  package-lock.json  package.json  vercel.json
Web-Book/docs/chapter-01-introduction/: _category_.json  lesson-01-what-is-physical-ai.md
Web-Book/docs/chapter-02-sensors-and-perception/: _category_.json  lesson-01-sensor-fundamentals.md
Web-Book/docs/chapter-03-actuators-and-control/: lesson-03-programming-basic-movements.md
Web-Book/docs/chapter-04-kinematics-and-dynamics/: _category_.json  lesson-01-forward-kinematics-for-robot-arms.md  lesson-03-mobile-robot-kinematics.md
Web-Book/docs/chapter-05-control-systems/: _category_.json  lesson-01-introduction-to-feedback-control.md  lesson-02-pid-control-explained.md  lesson-03-advanced-control-strategies.md
Web-Book/docs/chapter-06-motion-planning/: _category_.json  lesson-01-grid-based-path-planning.md  lesson-02-obstacle-avoidance-and-reactive-navigation.md  lesson-03-localization-and-mapping-slam-introduction.md
Web-Book/docs/chapter-07-machine-learning/: _category_.json  lesson-02-reinforcement-learning-basics.md  (+2 more)
rag-chat-bot/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
specs/001-book-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+84 files in other folders)
